Seeding Executives and updates for Externals

--- a/Web/Pages/Mockups/External/Admin_Shoreside.cshtml
+++ b/Web/Pages/Mockups/External/Admin_Shoreside.cshtml
@@ -9,12 +9,12 @@
 </div>
 
 <div class="mrgn-tp-lg">
-    <h3 class="text-center">@Localizer["CCG POSITIONS"]</h3>
-    <table class="table table-hover table-responsive table-bordered">
+    <h3 class="text-center">@Localizer["allpositions"]</h3>
+    <table class="table table-hover table-condensed table-responsive table-bordered">
         <thead>
             <tr>
-                <th class="bg-primary" width="15%">@Localizer["LEVEL"]</th>
-                <th class="bg-primary" width="73%">@Localizer["POSITIONS"]</th>
+                <th class="bg-primary" width="15%">@Localizer["level"]</th>
+                <th class="bg-primary" width="73%">@Localizer["positions"]</th>
                 <th class="bg-primary" width="12%"></th>
             </tr>
         </thead>
@@ -131,6 +131,261 @@
             <tr>
                 <td>AS-03</td>
                 <td>Supervisor, Recorded Information Management / Databse Agent / Operations Data Support</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Officer (Business Services, Regulatory Coast Guard Planning, Investment,   Project Planning & Control, Planning, Staff Management & Business Services) / Policy Analyst</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Senior Analyst Public Affairs and International Management (PAIM)/Business Resource Management (BRM)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Performance & Quality Assurance Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Executive Assistant to the Assistant Commissioner (AC), Deputy Commissioner (DC), Staff Officer to the Director General (DG)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Workforce Development Manager</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Workforce Development Analyst</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Fleet Resources Manager </td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Public Affairs - Web Officer / Leader Communications (Comms) & Internet / PIO Manager</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Marine Security Operations Centre (MSOC) Operations Liaison Officer </td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-04</td>
+                <td>Manager Finance Admin. & Planning / Executive & Client Services Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Officer (Occupational Health and Safety (OHS), Information Management and Physical Requirements)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Client Relations, Minister Correspondence & Project, Consultations, Planning and Performance</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Business Manager </td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Analyst (Sr. Expenditure & Planning, Portfolio, Senior Business Operations & Analysis, Planning, Business, Service Delivery, Pricing, Senior Resource, Senior Policy, Regulations & Legislation) / Analyst Strategic Initiatives / Budget & Resource Allocation</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Manager Business Resource Management (BRM)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Senior Business Analyst</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Collective Bargaining & Human Resources (HR) Issues Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Crewing Analyst & Human Resources (HR) Issues Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Fleet Safety Security Compliance Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Head of Student Affairs</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Campus Services Manager</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Supervisor Seagoing Personnel</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Senior Fleet Logistics Policy Analyst </td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Coordinator Search and Rescue (SAR) Projects</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Business Intelligence Administrator</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Leader Monitoring Communications and Information</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Regional Supervisor Network Services</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Desk Officer Technical Training</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-05</td>
+                <td>Compliance Auditor</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-06</td>
+                <td>Analyst (Senior Public Affairs, Senior Planning & Performance, Business Planning)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-06</td>
+                <td>Analyst - Fleet (Fleet Management, Exercise Planning Senior, Marine Operations)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-06</td>
+                <td>Investment Analyst</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-06</td>
+                <td>Manager (Operations Data, Planning & Performance, Program Planning, Cost-Control Systems, Risk Management, Performance Management, International Safety Management (ISM) Code Compliance & Audit) & Performance Measurement Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-06</td>
+                <td>Supt. Fleet Safety & Security / Marine Security Operations Centre (MSOC) Project Division</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-06</td>
+                <td>Head Quality Assurance & Academic Excellence</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-06</td>
+                <td>Executive Advisor to the Deputy Commissioner</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Regional Director, Integrated Business Management Services (IBMS)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Operations Personnel Manager </td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager Policy and Standards Operations Personnel</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Chief Operating Officer</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager Professional Development and Certification</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Executive Assistant for Commissioner</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager (Business Operations & Analysis, Resource Management, Service Delivery, Policy & Standards)</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager Workforce Development</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager, Performance Measurement</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager Operations & Finance Planning</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager Public Affairs & Information Management</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager Fleet Investment</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td>Manager, Incident Management</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-07</td>
+                <td> Senior Advisor Maritime Security</td>
+                <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+            </tr>
+            <tr>
+                <td>AS-08</td>
+                <td>Director, Safety and Security</td>
                 <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
         </tbody>
