--- a/Web/Pages/Mockups/External/External_Shoreside.cshtml
+++ b/Web/Pages/Mockups/External/External_Shoreside.cshtml
@@ -17,9 +17,11 @@
         </div>
         <div id="ct" class="col-sm-4 mrgn-bttm-md">
             <figure>
-                <img src="~/img/CCGMember/ENG.jpg" alt="Photo of engineering room" class="img-responsive thumbnail mrgn-bttm-sm" />
-                <figcaption class="text-center"><h6>@Localizer["ENG"]</h6></figcaption>
-            </figure>
+                <a href="Eng_Shoreside">
+                    <img src="~/img/CCGMember/ENG.jpg" alt="Photo of engineering room" class="img-responsive thumbnail mrgn-bttm-sm" />
+                </a>
+                    <figcaption class="text-center"><h6>@Localizer["ENG"]</h6></figcaption>
+</figure>
         </div>
         <div id="ct" class="col-sm-4 mrgn-bttm-md">
             <figure>
