--- a/Web/Pages/Mockups/External/Similar_Details.cshtml
+++ b/Web/Pages/Mockups/External/Similar_Details.cshtml
@@ -8,6 +8,8 @@
     <a href="#save"><span class="glyphicon glyphicon-save pull-right" alt="Save document"></span> </a>
 </div>
 
+<h3 class="text-center">@Localizer["SIMILAR POSITION DETAILS"]</h3>
+
 <div class="mrgn-tp-lg">
     <table class="table table-hover table-responsive table-bordered">
         <thead>
