--- a/Web/Pages/Mockups/Index.cshtml
+++ b/Web/Pages/Mockups/Index.cshtml
@@ -29,7 +29,7 @@
 
             <div class="col-lg-3 col-sm-4 mrgn-bttm-md">
                 <figure>
-                    <a href="External_Candidate">
+                    <a href="External/External_Candidate">
                         <img src="~/img/external candidates.png" alt="Photo of a group of individuals" class="img-responsive img-circle mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["External Candidate"]</h4></figcaption>
@@ -38,7 +38,7 @@
 
             <div class="col-lg-3 col-sm-4 mrgn-bttm-md">
                 <figure>
-                    <a href="#">
+                    <a href="Student/Index">
                         <img src="~/img/Students.png" alt="Photo of students at graduation" class="img-responsive img-circle mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Student"]</h4></figcaption>
