--- a/Web/Pages/Mockups/Similar_Details.cshtml
+++ b/Web/Pages/Mockups/Similar_Details.cshtml
@@ -10,6 +10,8 @@
     <button class="btn btn-primary pull-right mrgn-rght-md" type="button">@Localizer["Save PDF"]</button>
 </div>
 
+<h3 class="text-center">@Localizer["SIMILAR POSITION DETAILS"]</h3>
+
 <div class="mrgn-tp-lg">
     <table class="table table-hover table-responsive table-bordered">
         <thead>
