--- a/Web/Pages/Mockups/Similar_Details.cshtml
+++ b/Web/Pages/Mockups/Similar_Details.cshtml
@@ -16,7 +16,7 @@
     <table class="table table-hover table-responsive table-bordered">
         <thead>
             <tr>
-                <th class="bg-primary" colspan="2">@Localizer["POSITIONS DETAILS"]: CS-02 Computer Systems</th>
+                <th class="bg-primary" colspan="2">POSITIONS DETAILS: CS-02 Computer Systems</th>
             </tr>
         </thead>
         <tbody>
