--- a/Web/Pages/Mockups/Student/HS_Computer_List.cshtml
+++ b/Web/Pages/Mockups/Student/HS_Computer_List.cshtml
@@ -43,9 +43,9 @@
                 <td><a asp-page="Student_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
             <tr>
-                <td>RO-03 (PDAP)</td>
-                <td>Marine Communications and Traffic Services (MCTS)</td>
-                <td><a asp-page="Student_Details" role="button">@Localizer["More Details"]</a></td>
+                <td>RO-03</td>
+                <td>Marine Communications and Traffic Services (MCTS) - <a rel="external" target="_blank" href="https://www.ccg-gcc.gc.ca/college/MCTS-training-formation-SCTM/index-eng.html">Professional development apprenticeship programs (PDAP)</a></td>
+                <td><a asp-page="HS_MCTS_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
         </tbody>
     </table>
