similar section/page save navigation updates

--- a/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <figure>
-                    <a class="nav-link" asp-page="Navigation/Questionnaire">
+                    <a class="nav-link" asp-page="Navigation/PositionList">
                         <img src="~/img/CCGMember/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Nav"]</h4></figcaption>
@@ -15,7 +15,7 @@
             </div>
             <div class="col-sm-4">
                 <figure>
-                    <a asp-page="Engineering/Questionnaire">
+                    <a asp-page="Engineering/PositionList">
                         <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["Eng"]</h4></figcaption>
