--- a/Web/Views/ToPdf/GetDeltaAsPdf.cshtml
+++ b/Web/Views/ToPdf/GetDeltaAsPdf.cshtml
@@ -24,7 +24,7 @@
     var type1 = isEnglish ? "KNOWLEDGE ELEMENTS" : "ÉLÉMENTS DE CONNAISSANCE";
     var type2 = isEnglish ? "TECHNICAL ELEMENTS" : "ÉLÉMENTS TECHNIQUES";
     var type3 = isEnglish ? "BEHAVIOURAL ELEMENTS" : "ÉLÉMENTS COMPORTEMENTAUX";
-    var CERTIFICATIONS = "CERTIFICATIONS";
+    var CERTIFICATIONS = isEnglish ? "CERTIFICATIONS" : "ATTESTATIONS";
     var level = isEnglish ? "Level" : "Niveau";
     var positiondetails = isEnglish ? "POSITION DETAILS" : "DÉTAILS DU POSTE";
     var NoCertifications = isEnglish ? "No Certifications" : "Aucun certificat associées";
